feat: update account interface and admin component to include user ID and user name

--- a/src/app/accounts/accounts.component.html
+++ b/src/app/accounts/accounts.component.html
@@ -50,7 +50,7 @@
               <tr *ngFor="let account of accounts">
                 <td>{{account.accountNumber}}</td>
                 <td>{{account.accountType}}</td>
-                <td>{{account.balance | currencyFormat:account.currency}}</td>
+                <td>{{account.balance | currencyFormat}}</td>
                 <td>
                   <span class="badge" [ngClass]="{
                     'bg-success': account.status === 'ACTIVE',
